fixed detail table contrast

--- a/src/index.css
+++ b/src/index.css
@@ -168,6 +168,11 @@ tr:nth-child(even) {
   transition: background-color 0.3s ease;
 }
 
+.back-button {
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
 .theme-button:hover {
   background-color: #454745;
 }
@@ -294,4 +299,8 @@ tr:nth-child(even) {
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+.dark td {
+  background-color: #333;
 }
